--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -10,5 +10,7 @@
   "add_documents": "Добавление документов",
   "sign_and_send": "Подписать и отправить",
   "doc_not_sent": "Документ не был отправлен",
-  "remaining_signings": "Остаток подписей:"
+  "remaining_signings": "Остаток подписей:",
+  "sidebar_title": "Боковая панель",
+  "sidebar_content": "Это пример дополнительного контента, который открывается по клику на кнопку."
 } 
