--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -12,5 +12,8 @@
   "doc_not_sent": "Документ не был отправлен",
   "remaining_signings": "Остаток подписей:",
   "sidebar_title": "Боковая панель",
-  "sidebar_content": "Это пример дополнительного контента, который открывается по клику на кнопку."
+  "sidebar_content": "Это пример дополнительного контента, который открывается по клику на кнопку.",
+  "show_field": "Показать поле",
+  "custom_field_title": "Пользовательское поле",
+  "custom_field_content": "Это пример сайдбара для проверки работоспособности модуля."
 } 
